--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
        <div class = "container-fluid" id = "education">
            <div class="container" id = "INTeducation">
-            <p id = "ed">Education</p>
+            <h2 class = "display-5 text-center">Education</h2>
             <div class = "row justify-content-center">
                  <div class = "col-lg-4 col-md-6">
                      <div id = INTbtech>
