--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                          <p class = "EDUtitle">Bachelors of Engineering</p>
                          <p class="info">Guru Nanak Institute of Technology</p>
                          <p class="info">Stream - Computer Science Engineering</p>
-                         <p class="info">Secured an overall GPA of 7.01 until now</p>
+                         <p class="info">Secured an overall GPA of 7.01 till date</p>
                      </div>
                  </div>
  
@@ -83,7 +83,7 @@
                          <p class="info">Sri Chaitanya Juniour Kalashala,Hyderabad</p>
                          <p class="info">Courses Undertaken Physics, Chemistry and Maths</p>
                          <p class="info">Qualifed for JEE Advance</p>
-                         <p class="info">Scored 92.4% in my State Board Examination</p>
+                         <p class="info">Scored 92.4% in State Board Examination</p>
                      </div>
                  </div>
  
@@ -91,7 +91,7 @@
                      <div id = "INTtenth">
                          <p class = "EDUtitle">Secondary School Certificate</p>
                          <p class="info">Bhashyam Public School, Hyderabad</p>
-                         <p class="info">Scored 9.5 GPA in my State Board Examinations </p>
+                         <p class="info">Scored 9.5 GPA in State Board Examinations </p>
                      </div>
                  </div>
             </div>
