--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a href="MyResume.pdf" target="_blank">
                             <button type = "button" id = "view">View Resume</button>
                         </a>
-                        <a href="MyResume.pdf" download="P HEMANTH'S RESUME">
+                        <a href="MyResume.pdf" download="PASUPULA HEMANTH'S RESUME">
                             <button type="button" id = "download">Download Resume</button>
                             </a>
 
